--- a/engagement_and_reception/v1-engagement-and-reception.tex
+++ b/engagement_and_reception/v1-engagement-and-reception.tex
@@ -19,7 +19,7 @@
 \node[text width=12cm,align=center](Text){%
 Nisha Chandwani and Vicky Katara joyfully invite your gracious presence at the celebration of their marriage. Please honour us with your company.\\
 \vspace{12pt}
-\textbf{Time}: (Engagement) 7 PM - October 18th, 2018;\\ (Reception) @ 4 PM - October 19th, 2018\\
+\textbf{Time}: (Engagement) 8 PM - October 18th, 2018;\\ (Wedding) 4 PM - October 19th, 2018\\
 \vspace{12pt}
 \textbf{Location}: 
 Avion Hotel\\
@@ -36,9 +36,9 @@ Mumbai\\
 \foreignlanguage{sanskrit}{
 निशा चंदवानी और विक्की कटारा खुशी-खुशी उनकी शादी के शुभ उत्सव पर आपको आमंत्रित करते हैं। वे उम्मीद करते हैं कि आप उन्हें अपनी उपस्थिति से आशीर्वाद देंगे। \\}
 \vspace{12pt}
-\foreignlanguage{sanskrit}{\textbf{समय}}: (\foreignlanguage{sanskrit}{सगाई}) \foreignlanguage{sanskrit}{शाम ७ बजे}, \foreignlanguage{sanskrit}{अक्टूबर १८, २०१८} ; (\foreignlanguage{sanskrit}{रिसेप्शन}) \foreignlanguage{sanskrit}{शाम ४ बजे}, \foreignlanguage{sanskrit}{अक्टूबर १९, २०१८} \\
+\foreignlanguage{sanskrit}{\textbf{समय}}: (\foreignlanguage{sanskrit}{सगाई}) \foreignlanguage{sanskrit}{शाम ८ बजे}, \foreignlanguage{sanskrit}{अक्टूबर १८, २०१८}; (\foreignlanguage{sanskrit}{शादी समारोह}) \foreignlanguage{sanskrit}{शाम ४ बजे}, \foreignlanguage{sanskrit}{अक्टूबर १९, २०१८} \\
 \vspace{12pt}
-\foreignlanguage{sanskrit}{\textbf{स्थान}}: Avion Hotel\\
+\foreignlanguage{sanskrit}{\textbf{स्थान}}: \foreignlanguage{sanskrit}{एवियन होटेल}\\
 \foreignlanguage{sanskrit}{मुंबई डोमेस्टिक एयरपोर्ट}\\
 \foreignlanguage{sanskrit}{वीले पार्ले ईस्ट}\\
 \foreignlanguage{sanskrit}{मुंबई}\\
