--- a/reception-only/v1-reception-only.tex
+++ b/reception-only/v1-reception-only.tex
@@ -36,9 +36,9 @@ Mumbai\\
 \foreignlanguage{sanskrit}{
 निशा चंदवानी और विक्की कटारा खुशी-खुशी उनकी शादी के शुभ उत्सव पर आपको आमंत्रित करते हैं। वे उम्मीद करते हैं कि आप उन्हें अपनी उपस्थिति से आशीर्वाद देंगे। \\}
 \vspace{12pt}
-\foreignlanguage{sanskrit}{\textbf{समय}}: 4PM, \foreignlanguage{sanskrit}{अक्टूबर} 19th, 2018\\
+\foreignlanguage{sanskrit}{शाम ४ बजे}, \foreignlanguage{sanskrit}{अक्टूबर १९, २०१८} \\
 \vspace{12pt}
-\foreignlanguage{sanskrit}{\textbf{स्थान}}: Avion Hotel\\
+\foreignlanguage{sanskrit}{\textbf{स्थान}}: \foreignlanguage{sanskrit}{एवियन होटेल}\\
 \foreignlanguage{sanskrit}{मुंबई डोमेस्टिक एयरपोर्ट}\\
 \foreignlanguage{sanskrit}{वीले पार्ले ईस्ट}\\
 \foreignlanguage{sanskrit}{मुंबई}\\
